--- a/index.html
+++ b/index.html
@@ -666,9 +666,10 @@
                                 <img loading="lazy" src="static/images/results/bench.jpg" alt="sample7" />
                             </div>
                             <div class="card-content">To investigate the editing capabilities of various instruction inversion methods in open scenarios and facilitate a fair comparison of these methods, We
-                                establish a benchmark named <a href="https://drive.google.com/file/d/1uhOA8r0yBwDXg0aUCdJsoY4smer0rOv_/view?usp=sharing"><b>TOP-Bench</b></a> (<b>T</b>ransformation-<b>O</b>riented <b>P</b>aired <b>Bench</b>mark), which can be utilized for both qualitative and quantitative evaluations. Our benchmark spans 25 datasets corresponding to different editing
-                                effects. It covers a wide range of editing categories and scenarios, allowing for division from multiple dimensions. Each dataset consists of 10 pairs of training
-                                images and 5 pairs of testing images, totaling 750 images. Additionally, we provide text instructions aligned with the transformation effects for each dataset.
+                                establish a benchmark named <a href="https://drive.google.com/file/d/1uhOA8r0yBwDXg0aUCdJsoY4smer0rOv_/view?usp=sharing"><b>TOP-Bench</b></a> (<b>T</b>ransformation-<b>O</b>riented <b>P</b>aired <b>Bench</b>mark), 
+                                which can be utilized for both qualitative and quantitative evaluations. Our benchmark spans 25 datasets shown above corresponding to different editing
+                                effects. Each dataset consists of 10 pairs of training images and 5 pairs of testing images, totaling 750 images. 
+                                Additionally, we provide text instructions aligned with the transformation effects for each dataset.
                                 </div>
                         </div>
                     </div>
