--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                         </div>
                         <div class="has-text-justified">
                             <p style="text-align: center;">
-                                Exemplar image pairs:
+                                Exemplar image pairs
                                 <strong style="font-size: medium;">[&nbsp;<img src="static/images/reference/cloud_kitty_0.png" style="vertical-align:middle" width="50" height="50">, <img src="static/images/reference/cloud_kitty_1.png" style="vertical-align:middle" width="50" height="50">&nbsp;]</strong>
                             </p>
                         </div>
@@ -287,7 +287,7 @@
                         </div>
                         <div class="has-text-justified">
                             <p style="text-align: center;">
-                                Exemplar image pairs:
+                                Exemplar image pairs
                                 <strong style="font-size: medium;">[&nbsp;<img src="static/images/reference/lava_0.png" style="vertical-align:middle" width="50" height="50">, <img src="static/images/reference/lava_1.png" style="vertical-align:middle" width="50" height="50">&nbsp;]</strong>
                             </p>
                         </div>
@@ -314,7 +314,7 @@
                         </div>
                         <div class="has-text-justified">
                             <p style="text-align: center;">
-                                Exemplar image pairs:
+                                Exemplar image pairs
                                 <strong style="font-size: medium;">[&nbsp;<img src="static/images/reference/juice_0.png" style="vertical-align:middle" width="50" height="50">, <img src="static/images/reference/juice_1.png" style="vertical-align:middle" width="50" height="50">&nbsp;]</strong>
                             </p>
                         </div>
@@ -345,7 +345,7 @@
                         </div>
                         <div class="has-text-justified">
                             <p style="text-align: center;">
-                                Exemplar image pairs:
+                                Exemplar image pairs
                                 <strong style="font-size: medium;">[&nbsp;<img src="static/images/reference/read_books_0.png" style="vertical-align:middle" width="50" height="50">, <img src="static/images/reference/read_books_1.png" style="vertical-align:middle" width="50" height="50">&nbsp;]</strong>
                             </p>
                         </div>
@@ -373,7 +373,7 @@
                         </div>
                         <div class="has-text-justified">
                             <p style="text-align: center;">
-                                Exemplar image pairs:
+                                Exemplar image pairs
                                 <strong style="font-size: medium;">[&nbsp;<img src="static/images/reference/sketch_0.jpg" style="vertical-align:middle" width="50" height="50">, <img src="static/images/reference/sketch_1.jpg" style="vertical-align:middle" width="50" height="50">&nbsp;]</strong>
                             </p>
                         </div>
@@ -402,7 +402,7 @@
                         <div class="has-text-justified">
                         <div class="has-text-justified">
                             <p style="text-align: center;">
-                                Exemplar image pairs:
+                                Exemplar image pairs
                                 <strong style="font-size: medium;">[&nbsp;<img src="static/images/reference/smile_0.png" style="vertical-align:middle" width="50" height="50">, <img src="static/images/reference/smile_1.png" style="vertical-align:middle" width="50" height="50">&nbsp;]</strong>
                             </p>
                         </div>
@@ -434,7 +434,7 @@
                         </div>
                         <div class="has-text-justified">
                             <p style="text-align: center;">
-                                Exemplar image pairs:
+                                Exemplar image pairs
                                 <strong style="font-size: medium;">[&nbsp;<img src="static/images/reference/trafficlights_0.png" style="vertical-align:middle" width="50" height="50">, <img src="static/images/reference/trafficlights_1.png" style="vertical-align:middle" width="50" height="50">&nbsp;]</strong>
                             </p>
                         </div>
@@ -462,7 +462,7 @@
                         </div>
                         <div class="has-text-justified">
                             <p style="text-align: center;">
-                                Exemplar image pairs:
+                                Exemplar image pairs
                                 <strong style="font-size: medium;">[&nbsp;<img src="static/images/reference/d2c_0.png" style="vertical-align:middle" width="50" height="50">, <img src="static/images/reference/d2c_1.png" style="vertical-align:middle" width="50" height="50">&nbsp;]</strong>
                             </p>
                         </div>
@@ -490,7 +490,7 @@
                         </div>
                         <div class="has-text-justified">
                             <p style="text-align: center;">
-                                Exemplar image pairs:
+                                Exemplar image pairs
                                 <strong style="font-size: medium;">[&nbsp;<img src="static/images/reference/rain_0.png" style="vertical-align:middle" width="50" height="50">, <img src="static/images/reference/rain_1.png" style="vertical-align:middle" width="50" height="50">&nbsp;]</strong>
                             </p>
                         </div>
