--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
                             garnered significant attention in image editing. However, despite encompassing a wide range of editing priors, these methods are helpless
                             when handling editing tasks that are challenging to accurately describe
                             through language. We propose <b><i>InstructBrush</i></b>, an inversion method
-                            for instruction-based image editing methods to bridge this gap. It extracts editing effects from Exemplar image pairs: as editing instructions,
+                            for instruction-based image editing methods to bridge this gap. It extracts editing effects from exemplar image pairs as editing instructions,
                             which are further applied for image editing. Two key techniques are introduced into InstructBrush, <i>Attention-based Instruction Optimization</i> and
                             <i>Transformation-oriented Instruction Initialization</i>, to address the limitations of the previous method in terms of inversion effects and instruction
                             generalization. To explore the ability of instruction inversion methods to guide image editing in open scenarios, we establish a 
