--- a/index.html
+++ b/index.html
@@ -528,8 +528,7 @@
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </div>    </section>
     <!-- End paper abstract -->
 <!--    <section class="hero is-small">-->
 <!--        <div class="hero-body">-->
@@ -789,7 +788,7 @@
               <li><b><i>InstructBrush</i></b> inverts instructions from
                 Exemplar image pairs: by proposing novel <b>Transformation-oriented Instruction Initialization</b> (a) and <b>Attention-based Instruction Optimization</b> (b) modules. The former is
                 proposed to initialize the instruction, which effectively introduces the editing-related
-                prior to facilitate semantic alignment of the instruction with the Exemplar image pairs:.
+                prior to facilitate semantic alignment of the instruction with the exemplar image pairs.
                 The latter introduces the editing instruction into the cross-attention layers of the
                 instruction-based image editing model and directly optimizes the Keys and Values
                 corresponding to the instruction within these layers. After optimization, the learned
