--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta property="og:title"
         content="InstructBrush: Learning Attention-based Instruction Optimization for Image Editing" />
     <meta property="og:url" content="https://royzhao926.github.io/InstructBrush/" />
-    <meta property="og:image" content="static/images/banner/banner.png" />
+    <meta property="og:image" content="static/images/banner1.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>InstructBrush</title>
-    <link rel="icon" type="image/x-icon" href="static/static/images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="static/images/favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro" rel="stylesheet">
 
     <link rel="stylesheet" href="static/css/bulma.min.css">
